<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearTablaActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombreEquipo"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent" android:hint="@string/NombreDeEquipo" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etNombreLiga" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/etNombreEquipo" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/Liga" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/etFechaCreacion" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/etNombreLiga" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/fechaCreaciom" android:autofillHints=""/>
    <Button
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnCancelar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btnGuardar" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/etCampeonActual"/>
    <Button
            android:text="@string/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnGuardar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/btnCancelar" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/etCampeonActual"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etCopasInter" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/etFechaCreacion" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:inputType="number"
            android:hint="@string/numeroCopas" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etCampeonActual" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/etCopasInter" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:inputType="text"
            android:hint="@string/campeonActual" android:autofillHints=""/>
</android.support.constraint.ConstraintLayout>